--- a/online-ticket-booking-server/package.json
+++ b/online-ticket-booking-server/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx --watch src/server.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
