--- a/online-ticket-booking-server/package.json
+++ b/online-ticket-booking-server/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx --watch src/server.ts"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "tsx": "^4.21.0",
@@ -16,6 +17,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
