--- a/online-ticket-booking-server/package.json
+++ b/online-ticket-booking-server/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "dev": "tsx --watch src/server.ts"
   },
   "devDependencies": {
