--- a/online-ticket-booking-server/package.json
+++ b/online-ticket-booking-server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.1"
+    "mongoose": "^9.0.1",
+    "stripe": "^20.1.0"
   }
 }
